<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head_detail_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_bule"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.onemena.widght.HelveRomanTextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/edit"
            android:textColor="@color/white" />

        <com.onemena.widght.HelveRomanTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/my_collection"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/details_navbar_back" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.onemena.app.refresh.PullToRefreshLayout
                android:id="@+id/refreashLayout"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_below="@+id/title_bar"
                android:layout_weight="1">


                <include layout="@layout/refresh_head" />


                <com.onemena.app.refresh.PullableListView
                    android:id="@+id/pullable_listview_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <include layout="@layout/load_more" />

            </com.onemena.app.refresh.PullToRefreshLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_unsuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/ll_unsuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/details_failed_to_load_img"
                    app:night_src="@mipmap/details_failed_to_load_img_night"/>

                <com.onemena.widght.HelveRomanTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="الشبكة ضعيفة، انقر لإعادة التحميل"
                    android:textColor="@color/textcolor_a1a6bb"
                    app:night_textColor="@color/textcolor_707070"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_no_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img" />

            <com.onemena.widght.HelveRomanTextView
                android:id="@+id/tv_null_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/no_hava_collection"
                android:textColor="@color/textcolor_a1a6bb"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/textcolor_a9a9a9" />

            <TextView
                android:id="@+id/tv_delete_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f0fafafa"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/textcolor_64697b"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>